--- a/TagLib.Lite.Test/TagLib.Lite.Test.csproj
+++ b/TagLib.Lite.Test/TagLib.Lite.Test.csproj
@@ -21,9 +21,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0-preview-20170106-08" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0" />
     <PackageReference Include="dotnet-test-nunit" Version="3.4.0-beta-3" />
-    <PackageReference Include="NUnit" Version="3.6.0" />
+    <PackageReference Include="NUnit" Version="3.6.1" />
   </ItemGroup>
 
 </Project>
