First stab at a working SQLite-backed media library
#21

--- a/FlukeBox/FlukeBox.csproj
+++ b/FlukeBox/FlukeBox.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="BuildWebCompiler" Version="1.11.326" />
     <PackageReference Include="Dapper" Version="1.50.2" />
+    <PackageReference Include="Dapper.Contrib" Version="1.50.0" />
     <PackageReference Include="Microsoft.AspNetCore" Version="1.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="1.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.2" />
